Fix list view alignment (#325)
* Centered top nav, styled

* Fix margin top for list view

* fix list view margin top

--- a/coderbounty/static/css/style.css
+++ b/coderbounty/static/css/style.css
@@ -1723,9 +1723,9 @@ span#email-help-text{
 .inline{display:inline-block;}
 .list-table-header{margin-top:60px;}
 .list-hr{width:95%;border-width:2px;}
-.list-table{margin-top:-100px;margin-left:-10px;}
+.list-table{margin-top:0px;margin-left:-10px;}
 .list-image{padding:2em;}
-.list-people{width:150px;height:60px;float:left;margin-top:-80px;}
+.list-people{width:150px;height:60px;float:left;margin-top:0px;}
 .take{margin-left:20px;}
 .list-table-header-user-org{padding-left:50px;padding-right:10px;}
 .list-table-header-issue{padding-left:50px;padding-right:10px;}
